# ocore

./: INSTALL
contrib/gitian-downloader/: wtogami-key.pgp
doc/: README.md
src/: Makefile.am  Makefile.include  chainparams.cpp  checkpoints.cpp  init.cpp  main.cpp  net.cpp  ocored.cpp  purge.cpp  rpcblockchain.cpp  rpcclient.cpp  rpcdump.cpp  rpcmining.cpp  rpcmisc.cpp  rpcnet.cpp  rpcprotocol.cpp  rpcrawtransaction.cpp  rpcserver.cpp  rpcwallet.cpp  util.cpp  version.cpp
src/qt/: Makefile.am  addressbookpage.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoingui.cpp  bitcoinunits.cpp  bitcoinunits.h  cryptonitestrings.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  openuridialog.cpp  optionsmodel.cpp  overviewpage.cpp  paymentserver.cpp  rpcconsole.cpp  sendcoinsdialog.cpp  signverifymessagedialog.cpp  splashscreen.cpp  test.sh  utilitydialog.cpp
src/qt/forms/: aboutdialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  signverifymessagedialog.ui
